--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7619,7 +7619,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 }
 
 .navbar-nav > li#nav-search > a {
-  padding: 10px 1em;
+  padding: 7px 0.5em;
 }
 
 button.btn.btn-default.visit-give-mobile, button.btn.btn-default.give-mobile, button.btn.btn-default.apply-mobile {
@@ -7782,21 +7782,31 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
     border-radius: 0;
   }
 
-  li {
+  li.dropdown {
     font-size: 0.74em;
-    margin-top: 10px;
-    margin-bottom: 7px;
-    padding: 5px 0px;
+    margin-top: 8px;
+    padding: 0px;
     border-bottom: none;
     margin-right: 0.8em;
+    border-right: 2px solid #003a6e;
   }
 
-  li.dropdown {
-    border-right: 2px solid #003a6e;
+  li.dropdown.last {
+    border-right: none;
+    margin-right: none;
+  }
+
+  ul.dropdown-menu li {
+    margin-top: 0px;
   }
 
   ul.pushdown-menu > a li {
     padding-top: 0;
+  }
+
+  .dropdown-last {
+    border-right: none !important;
+    margin-right: none !important;
   }
 
   .navbar-collapse #wrapper {
@@ -7813,7 +7823,7 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
 
   #nav-search {
     top: 18px;
-    margin-top: 11px;
+    margin-top: 7px;
   }
 
   ul.nav.navbar-nav li a {
@@ -8003,7 +8013,7 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   }
 
   .nav > li * {
-    padding: 5px 0px;
+    padding: 0px;
     font-size: 1.33em;
   }
 
