--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -95,7 +95,7 @@
                     <li><a href="/alumni/contactus/">Contact Alumni &amp; Friends</a></li>
                   </ul>
                </li>
-               <li class="collapse navbar-collapse">
+               <li class="dropdown collapse navbar-collapse dropdown-last">
                   <a href="http://roadrunnersathletics.com"  role="button">Athletics </a>
                </li>
                <li id="nav-search" type="button">
