ADA skip to content fixes (see https://codepen.io/AtlantaJones/pen/gofmz?editors=1010)

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -1,4 +1,5 @@
 <!-- Global Header -->
+<a href="#content" class="skip">Skip to content</a>
 <header>
    <div class="navbar-fixed-top ">
       <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
