--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -976,3 +976,28 @@ body{
 .msudenver_logo_change {
     height:50px;
   }
+
+
+.skip {
+    position: absolute;
+    top: -1000px;
+    left: -1000px;
+    height: 1px;
+    width: 1px;
+    text-align: left;
+    overflow: hidden;
+    font-size: x-large;
+}
+
+a.skip {
+  color: white;
+  text-decoration: underline;
+}
+
+a.skip:active, a.skip:focus, a.skip:hover {
+    left: 0;
+    top: 0;
+    width: auto;
+    height: auto;
+    overflow: visible;
+}
