--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -8076,6 +8076,30 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   height: 50px;
 }
 
+.skip {
+  position: absolute;
+  top: -1000px;
+  left: -1000px;
+  height: 1px;
+  width: 1px;
+  text-align: left;
+  overflow: hidden;
+  font-size: x-large;
+}
+
+a.skip {
+  color: white;
+  text-decoration: underline;
+}
+
+a.skip:active, a.skip:focus, a.skip:hover {
+  left: 0;
+  top: 0;
+  width: auto;
+  height: auto;
+  overflow: visible;
+}
+
 /* Homepage base styles */
 .homepage-main {
   margin-right: auto;
