--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7622,7 +7622,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
   padding: 7px 0.5em;
 }
 
-button.btn.btn-default.visit-give-mobile, button.btn.btn-default.give-mobile, button.btn.btn-default.apply-mobile {
+a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-default.apply-mobile {
   text-align: center;
 }
 
@@ -7912,7 +7912,7 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
     color: #fff;
   }
 
-  button.btn.btn-default.visit-give-mobile, button.btn.btn-default.give-mobile, button.btn.btn-default.apply-mobile {
+  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-default.apply-mobile {
     width: 9%;
     position: relative;
     top: -5.7em;
@@ -7926,22 +7926,22 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
     font-size: 1.2em;
   }
 
-  button.btn.btn-default.visit-give-mobile {
+  a.btn.btn-default.visit-give-mobile {
     right: 22%;
     padding: 0.3em 0.1em !important;
   }
 
-  button.btn.btn-default.give-mobile {
+  a.btn.btn-default.give-mobile {
     right: 12.8%;
     padding: 0.3em 0.1em !important;
   }
 
-  button.btn.btn-default.apply-mobile {
+  a.btn.btn-default.apply-mobile {
     right: 3.56%;
     padding: 0.3em 0.1em !important;
   }
 
-  button.apply-mobile, button.visit-give-mobile, .fac-staf-stu-mobile {
+  a.apply-mobile, a.visit-give-mobile, .fac-staf-stu-mobile {
     position: absolute !important;
   }
 
@@ -8060,15 +8060,15 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
     width: 12em;
   }
 
-  button.btn.btn-default.visit-give-mobile {
+  a.btn.btn-default.visit-give-mobile {
     right: 23.77%;
   }
 
-  button.btn.btn-default.give-mobile {
+  a.btn.btn-default.give-mobile {
     right: 14.6%;
   }
 
-  button.btn.btn-default.apply-mobile {
+  a.btn.btn-default.apply-mobile {
     right: 5.4%;
   }
 }
@@ -8076,7 +8076,7 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   height: 50px;
 }
 
-.skip {
+.skip-content {
   position: absolute;
   top: -1000px;
   left: -1000px;
@@ -8087,12 +8087,12 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   font-size: x-large;
 }
 
-a.skip {
+a.skip-content {
   color: white;
   text-decoration: underline;
 }
 
-a.skip:active, a.skip:focus, a.skip:hover {
+a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
   left: 0;
   top: 0;
   width: auto;
