--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -1,5 +1,5 @@
 <!-- Global Header -->
-<a href="#content" class="skip">Skip to content</a>
+<a href="#content" class="skip-content">Skip to content</a>
 <header>
    <div class="navbar-fixed-top ">
       <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
@@ -26,9 +26,9 @@
          <!-- Collect the nav links, forms, and other content for toggling -->
          <div class="" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-               <a href="/visit"><button type="button" class="btn btn-default visit-give-mobile collapse navbar-collapse">Visit</button></a>
-               <a href="/giving"><button type="button" class="btn btn-default visit-give-mobile give-mobile collapse navbar-collapse">Give</button></a>
-               <a href="/admissions"><button type="button" class="btn btn-default apply-mobile collapse navbar-collapse">Apply</button></a>
+               <a href="/visit" type="button" class="btn btn-default visit-give-mobile collapse navbar-collapse">Visit</a>
+               <a href="/giving" type="button" class="btn btn-default visit-give-mobile give-mobile collapse navbar-collapse">Give</a>
+               <a href="/admissions" type="button" class="btn btn-default apply-mobile collapse navbar-collapse">Apply</a>
                <ul class="fac-staf-stu-mobile collapse navbar-collapse">
                   <li><a href="/studenthub">Current Students</a></li>
                   <li class="hide-pipe">|</li>
@@ -101,6 +101,7 @@
                </li>
                <li id="nav-search" type="button">
                  <a href="#" data-toggle="modal" data-target="#myModal">
+                   <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
                    <span class="fa fa-search search-desktop"></span>
                  </a>
                </li>
