--- a/development/terminalfour/src/html/includes/road-profile-17-18.html
+++ b/development/terminalfour/src/html/includes/road-profile-17-18.html
@@ -32,7 +32,7 @@
    }
    .content .img-responsive {
     padding: 0px;
-    width: 95%;
+    width: 70%;
    }
    .content a .promo-element {
     color: #535354;
@@ -40,6 +40,9 @@
    }
    .call-us {
     text-align: center;
+   }
+   iframe {
+    border-color: transparent;
    }
 
   @media screen and (min-width: 992px) {
@@ -72,9 +75,9 @@
    <div class="hero">
       <t4 type="content" name="Full Profile Photo" output="normal" formatter="image/*" />
       <div class="hero-caption-ryor">
-         <h2>
+         <h1>
             <t4 type="content" name="Name" output="normal" modifiers="htmlentities"/>
-         </h2>
+         </h1>
          <h3>
             <t4 type="content" name="Attribute" output="normal" modifiers="htmlentities" />
          </h3>
@@ -97,7 +100,7 @@
       <span>
    </div>
    <div class="col-xs-12 col-md-5">
-      <p style="height: 650px;"><iframe src="https://msudenver.qualtrics.com/jfe/form/SV_07DbpVLhIxqZhGd" width="100%" height="100%"></iframe></p>
+      <p style="height: 700px;"><iframe src="https://msudenver.qualtrics.com/jfe/form/SV_07DbpVLhIxqZhGd" width="100%" height="100%"></iframe></p>
       <div class="well">
          <h4><strong>This is where lives are transformed. Where new paths unfold. Where the future spreads out in front of you. </strong></h4>
          <p>At MSU Dever, we celebrate that each person’s road is different. Where will yours take you?</p>
