--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -913,7 +913,7 @@ body{
 }
 
 @media (min-width: $screen-lg-min) {
-  .container-fluid {
+  .header-container, .container-fluid {
         padding-left: percentage(1/$grid-columns) ;
         padding-right: percentage(1/$grid-columns) ;
   }
@@ -960,13 +960,13 @@ body{
     width: 12em;
   }
   a.btn.btn-default.visit-give-mobile {
-      right: 23.77%;
+      right: 27.77%;
   }
   a.btn.btn-default.give-mobile {
-      right: 14.6%;
+      right: 18.6%;
   }
   a.btn.btn-default.apply-mobile {
-      right: 5.4%;
+      right: 9.4%;
   }
 
 //  .pushdown-menu {
