fixes in preparation for moving to T4

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -35,7 +35,7 @@
                   <li><a href="/facstaff">Faculty &amp; Staff</a></li>
                </ul>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About MSU Denver <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/about">About MSU Denver</a></li>
                     <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
@@ -49,24 +49,23 @@
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/admissions">Admissions</a></li>
-                    <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
-                    <li><a href="/admissions/apply/transfer">Transfer Students</a></li>
-                    <li><a href="/admissions/apply/adultstudents">Adult Students</a></li>
-                    <li><a href="/admissions/apply/masters">Master&rsquo;s Programs</a></li>
-                    <li><a href="/admissions/apply/militaryveteran">Military Veterans</a></li>
-                    <li><a href="/admissions/apply/internationalstudents">International Students</a></li>
-                    <li><a href="/cost">Out-of-State</a></li>
-                    <li><a href="/admissions/apply/re-admit">Re-Admit</a></li>
-                    <li><a href="/admissions/apply/non-degree">Non-Degree</a></li>
-                    <li><a href="/admissions/apply/concurrentlyenrolled">Concurrently Enrolled</a></li>
+                    <li><a href="/admissions/student-types/first-timeundergraduate/">First-Time Undergraduate</a></li>
+                    <li><a href="/admissions/student-types/transfer">Transfer Students</a></li>
+                    <li><a href="/admissions/student-types/adultstudents">Adult Students</a></li>
+                    <li><a href="/admissions/student-types/masters">Master&rsquo;s Programs</a></li>
+                    <li><a href="/admissions/student-types/militaryveteran">Military Veterans</a></li>
+                    <li><a href="/admissions/student-types/internationalstudents">International Students</a></li>
+                    <li><a href="/admissions/student-types/re-admit">Re-Admit</a></li>
+                    <li><a href="/admissions/student-types/non-degree">Non-Degree</a></li>
+                    <li><a href="/admissions/student-types/concurrentlyenrolled">Concurrently Enrolled</a></li>
                     <li><a href="/cost">Cost</a></li>
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/academics/">Academics Overview</a></li>
                     <li><a href="/programs/">Academic Programs</a></li>
@@ -78,13 +77,13 @@
                     <li><a href="/fys/">First Year Success</a></li>
                     <li><a href="/campuslife/academicsupport">Academic Support</a></li>
                     <li><a href="/online/">Online Courses</a></li>
-                    <li><a href="/extendedcampus">Extended Campus</a></li>
+                    <li><a href="/innovative-lifelong-learning/">Innovative and Lifelong Learning</a></li>
                     <li><a href="/academics/specialprograms">Special Programs</a></li>
                     <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/alumni/">Alumni &amp; Friends Home</a></li>
                     <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
@@ -100,9 +99,9 @@
                   <a href="http://roadrunnersathletics.com"  role="button">Athletics </a>
                </li>
                <li id="nav-search" type="button">
-                 <a href="#" data-toggle="modal" data-target="#myModal">
+                 <a href="#" data-toggle="modal" data-target="#searchModal">
                    <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
-                   <span class="fa fa-search search-desktop"></span>
+                   <span class="search-button-text">SEARCH   </span><span class="fa fa-search search-desktop"></span>
                  </a>
                </li>
             </ul>
@@ -113,24 +112,25 @@
 </header>
 <!-- Button trigger modal -->
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <h4 class="modal-title" id="myModalLabel">Search MSU Denver</h4>
+<div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel">
+  <h4 class="modal-title" id="searchModalLabel">Search MSU Denver</h4>
    <div class="modal-dialog" role="document">
       <div class="modal-content">
          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">Close Search  <b>&times;</b></span></button>
          </div>
          <div class="modal-body">
             <form>
                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Search">
+                  <input type="text" class="form-control" placeholder="Search MSU Denver...">
                </div>
-               <button type="submit" class="btn btn-default">Submit</button>
+               <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+               <span type="submit" class="fa fa-search submit-desktop"></span>
             </form>
          </div>
-         <div class="modal-footer">
+         <!-- <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-         </div>
+         </div> -->
       </div>
    </div>
 </div>
