--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -26,14 +26,22 @@
          <!-- Collect the nav links, forms, and other content for toggling -->
          <div class="" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-               <a href="/visit" type="button" class="btn btn-default visit-give-mobile collapse navbar-collapse">Visit</a>
-               <a href="/giving" type="button" class="btn btn-default visit-give-mobile give-mobile collapse navbar-collapse">Give</a>
-               <a href="/admissions" type="button" class="btn btn-default apply-mobile collapse navbar-collapse">Apply</a>
-               <ul class="fac-staf-stu-mobile collapse navbar-collapse">
-                  <li><a href="/studenthub">Current Students</a></li>
-                  <li class="hide-pipe">|</li>
-                  <li><a href="/facstaff">Faculty &amp; Staff</a></li>
-               </ul>
+              <li class="collapse navbar-collapse">
+                 <a href="/visit" type="button" class="btn btn-default visit-give-mobile">Visit</a>
+              </li>
+               <li class="collapse navbar-collapse">
+                 <a href="/giving" type="button" class="btn btn-default visit-give-mobile give-mobile ">Give</a>
+              </li>
+               <li class="collapse navbar-collapse">
+                 <a href="/admissions" type="button" class="btn btn-default apply-mobile">Apply</a>
+              </li>
+               <li class="collapse navbar-collapse">
+                 <ul class="fac-staf-stu-mobile">
+                    <li><a href="/studenthub">Current Students</a></li>
+                    <li class="hide-pipe">|</li>
+                    <li><a href="/facstaff">Faculty &amp; Staff</a></li>
+                 </ul>
+              </li>
                <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
                   <ul class="dropdown-menu">
