--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -6,7 +6,7 @@
   transition: all .2s ease-out
 }
 #layout {
-  z-index: 9998;
+  // z-index: 1;
   padding-left: 200px;
   left: 0;
   top: 100px
@@ -20,7 +20,7 @@
   top: 0;
   left: 150px;
   bottom: 0;
-  z-index: 9998;
+  // z-index: 9998;
   background: #fff;
   color:black;
   -webkit-overflow-scroll: touch
@@ -110,6 +110,14 @@
 }
 .menu-link:focus span:after, .menu-link:hover span:after {
   margin-top: .6em
+}
+
+ul.nav.nav-list > li > a {
+	margin-left: -30px;
+}
+
+.currentbranch0 a {
+	margin-left: -30px;
 }
 
 .multilevel-linkul-0 {
